Move model IDs to Base, refactor tests

--- a/.env.dist
+++ b/.env.dist
@@ -1,7 +1,6 @@
 # MongoDB
 MONGO_URI="mongodb://localhost:27017"
-MONGO_URI_TEST="mongodb://localhost:27017"
-MONGO_DB_NAME="l1_test"
+MONGO_DB_NAME="l1_test2"
 
 # Redis
 REDIS_ADDR="localhost:6379"
