--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,11 +1,11 @@
 on:
   push:
-    branches: [main]
+    branches: ['*']
   pull_request:
-    branches: [main]
+    branches: ['*']
 
 jobs:
-  build:
+  ci:
     runs-on: ubuntu-latest
 
     services:
@@ -31,7 +31,7 @@ jobs:
 
     strategy:
       matrix:
-        go-version: [1.22]
+        go-version: [1.23]
 
     steps:
       - name: Checkout code
